--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 # Ignore the file of Chandeep Book
-Power Query Beyond The User Interface (ID - 69296241).pdf
+.Power Query Beyond The User Interface (ID - 69296241).pdf
